--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.23.3",
@@ -30,6 +32,11 @@
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
     "@iconify/react": "^4.1.1",
+    "@storybook/addon-interactions": "^7.6.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.6.1",
+    "@storybook/nextjs": "^7.6.1",
+    "@storybook/test": "^7.6.1",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.10",
     "@types/node": "^20",
@@ -39,9 +46,11 @@
     "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "eslint-plugin-storybook": "^0.6.15",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "react-test-renderer": "^18.2.0",
+    "storybook": "^7.6.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5"
   },
