--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/react": "^7.6.1",
     "axios": "^1.6.2",
     "next": "14.0.3",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.1"
