--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@storybook/addon-links": "^7.6.1",
     "@storybook/react": "^7.6.1",
     "axios": "^1.6.2",
-    "next": "14.0.3",
+    "next": "^14.0.5-canary.7",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
