--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "axios": "^1.6.2",
-    "next": "^14.0.5-canary.7",
+    "next": "^14.0.4",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
