--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "axios": "^1.6.2",
+    "i18next": "^23.7.11",
     "next": "^14.0.4",
+    "next-i18next": "^15.1.1",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^13.5.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
