--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-    "theme_color": "#f69435",
-    "background_color": "#f69435",
-    "display": "standalone",
+    "theme_color": "#3A86DF",
+    "background_color": "#1F1F1F",
+    "display": "browser",
     "scope": "/",
     "start_url": "/",
     "name": "Bruno",
