--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "theme_color": "#3A86DF",
-    "background_color": "#3A86DF",
+    "theme_color": "#3576CB",
+    "background_color": "#3576CB",
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
